fix spacing and read/unread indicator

--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -93,7 +93,8 @@
       height: 30px
 
   a
-    line-height: 20px
+    line-height: 16px
+    min-height: 28px
 
 // Plan about page
 
